--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -3,11 +3,12 @@
 * {
 	margin: 0;
 	padding: 0;
+	font-family: 'yekan', sans-serif;
+	font-weight: 500;
 }
 body {
     margin: 0 !important;
     direction: rtl;
-    font-family: 'Roboto', sans-serif;
     overflow-y: hidden;
     height: 100%;
 }
@@ -22,18 +23,59 @@ h6{
 	margin:0px;
 	color:#777;
 }
+div.wrapper {
+    padding: 24px;
+}
 section {
     height: 100vh;
     background: rgba(255,255,255,0.85);
 }
+nav {
+    width: calc(100% - 220px);
+    float: left;
+}
+.serachlive {
+    position: relative;
+    display: flex !important;
+    border: 1px solid #e2e1e1;
+    width: 400px;
+    border-radius: 16px;
+    padding: 2px;
+    align-items: centers;
+    background: linear-gradient(225deg, #4c23a92b, #ffffff);
+    box-shadow: 0px -1px 100px #f5f5f5, 0px 0px 100px #ffffff;
+}
+input#livesearch {
+	background-color: transparent;
+    border: 0;
+    width: 90%;
+    font-size: 15px;
+    outline: 0;
+    color: #333;
+    font-family: 'yekan';
+    font-weight: 400;
+    padding: 10px;
+}
+a#serachlive-btn {
+	width: 10%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+span.icon-btn svg {
+    width: 26px;
+    fill: #3a0ca3;
+}
 #accordian {
 	background: #3a0ca3;
 	width: 210px;
-	padding: 10px;
+	padding: 20px 10px;
 	float: right;
 	height: 100vh;
 	overflow-x: hidden;
-	position: relative;
+	top: 0;
+	right: 0;
+	position: absolute;
 	padding-left: 0px;
 }
 .main-navbar{
@@ -44,11 +86,13 @@ section {
 	list-style-type: none;
 }
 #accordian ul li a svg {
-    width: 20px;
-	fill: #fff;
+	width: 20px;
+    fill: #fff;
+    position: relative;
+    top: 5px;
 }
 #accordian ul li a{
-	color: rgba(255,255,255,0.5);
+	color: rgba(255,255,255,0.9);
     text-decoration: none;
     font-size: 15px;
     line-height: 45px;
@@ -61,6 +105,7 @@ section {
 
 #accordian>ul>li.active>a{
 	color: #5161ce;
+	font-weight: 700;
 	background-color: transparent;
 	transition: all 0.7s;
 }
@@ -122,7 +167,7 @@ i.height-min svg {
     position: absolute;
     width: 50px;
     height: 50px;
-    border-radius: 25%;
+    border-radius: 30%;
     background-color: #3a0ca3;
 }
 .selector-active .top:before{
